--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "typescript": "^4.9.5",
     "uuid": "^9.0.1",
     "vue": "^3.2.37",
+    "vue-draggable-plus": "^0.3.4",
     "vue-i18n": "^9.4.1"
   },
   "devDependencies": {
